country: A function to get the country from the affiliation

--- a/CSRankings_per_country.ipynb
+++ b/CSRankings_per_country.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0b9885b",
+   "id": "a092b826",
    "metadata": {},
    "source": [
     "# CS848: The art and science of empirical computer science"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e863ad",
+   "id": "b0d515e2",
    "metadata": {},
    "source": [
     "## Assignment: Visualization Project"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6742d27",
+   "id": "35eaaab8",
    "metadata": {},
    "source": [
     "**Description:** At a high-level, for this visualization project, I would like you to perform exploratory data analysis on a bibliometric dataset of your choice. From this exploration, I would like you to come up with one or more interesting observations or questions to ask. And then, I would like you to build a visualization that either \"makes the points\" or answers the questions that you posed."
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a09d9b5",
+   "id": "cc3c61cb",
    "metadata": {},
    "source": [
     "### 1. Exploratory data analysis on a bibliometric dataset of your choice:\n"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7877e5b",
+   "id": "ee6f7618",
    "metadata": {},
    "source": [
     "* The data set I chose is [DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf). \n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee22c7e0",
+   "id": "27c6b525",
    "metadata": {},
    "source": [
     "### 2. Observations or questions to ask:\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a7b340",
+   "id": "3ba88a68",
    "metadata": {},
    "source": [
     "### How to answer this question?"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198bc2fd",
+   "id": "c0f13f51",
    "metadata": {},
    "source": [
     "[DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf) provides the backend information needed to execute SPARQL queries from any where.\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d1fb1c47",
+   "id": "509918d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +135,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64ec6264",
+   "metadata": {},
+   "source": [
+    "But, the returned information does not contain the country!\n",
+    "\n",
+    "We need to find a way to detect it from the affiliation. This function checks if the last part in the affiliation represents a country according to the [iso3166](https://pypi.org/project/iso3166/) standard. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3258f796",
+   "id": "5b1638ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def country(aff):\n",
+    "    res = \"Cannot tell\"\n",
+    "    if \",\" in aff:\n",
+    "        # If the country is mentioned in the affiliation,\n",
+    "        # it will usually after the last \",\".\n",
+    "        candidate = aff.split(\",\")[-1]\n",
+    "        # Clean the extracted name\n",
+    "        if candidate.startswith(\"The\"):\n",
+    "            candidate = candidate.replace(\"The\", \"\")\n",
+    "        candidate = candidate.strip()\n",
+    "        \n",
+    "        if candidate in countries:\n",
+    "            res = countries.get(candidate).name\n",
+    "\n",
+    "    return res"
+   ]
   }
  ],
  "metadata": {
