createDataFrame: A function that returns a Pandas dataframe from the results of the query

--- a/CSRankings_per_country.ipynb
+++ b/CSRankings_per_country.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a092b826",
+   "id": "24532095",
    "metadata": {},
    "source": [
     "# CS848: The art and science of empirical computer science"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d515e2",
+   "id": "2c5a08fb",
    "metadata": {},
    "source": [
     "## Assignment: Visualization Project"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35eaaab8",
+   "id": "e305bfe0",
    "metadata": {},
    "source": [
     "**Description:** At a high-level, for this visualization project, I would like you to perform exploratory data analysis on a bibliometric dataset of your choice. From this exploration, I would like you to come up with one or more interesting observations or questions to ask. And then, I would like you to build a visualization that either \"makes the points\" or answers the questions that you posed."
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3c61cb",
+   "id": "91d5abac",
    "metadata": {},
    "source": [
     "### 1. Exploratory data analysis on a bibliometric dataset of your choice:\n"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6f7618",
+   "id": "709306e6",
    "metadata": {},
    "source": [
     "* The data set I chose is [DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf). \n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27c6b525",
+   "id": "8a508c52",
    "metadata": {},
    "source": [
     "### 2. Observations or questions to ask:\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba88a68",
+   "id": "0e1d74e3",
    "metadata": {},
    "source": [
     "### How to answer this question?"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f13f51",
+   "id": "7c4833a4",
    "metadata": {},
    "source": [
     "[DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf) provides the backend information needed to execute SPARQL queries from any where.\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "509918d3",
+   "id": "cd7a2149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,18 +136,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ec6264",
+   "id": "f1783a24",
    "metadata": {},
    "source": [
     "But, the returned information does not contain the country!\n",
     "\n",
-    "We need to find a way to detect it from the affiliation. This function checks if the last part in the affiliation represents a country according to the [iso3166](https://pypi.org/project/iso3166/) standard. \n"
+    "We need to find a way to detect it from the affiliation. This function checks if the last part in the affiliation represents a country according to the [iso3166](https://pypi.org/project/iso3166/) standard. If it is not there, the country will be \"Cannot tell\".\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b1638ee",
+   "execution_count": 3,
+   "id": "3aa12985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +166,42 @@
     "            res = countries.get(candidate).name\n",
     "\n",
     "    return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317ab080",
+   "metadata": {},
+   "source": [
+    "We create a Pandas dataframe from the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ffc3a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createDataFrame(keywords, conferences, years):\n",
+    "    rows , cols = query(keywords, conferences, years)\n",
+    "    df = pd.DataFrame(rows, columns=cols)\n",
+    "    countries_col =[]\n",
+    "    # Extract countries from affiliations\n",
+    "    for aff in df[\"affiliation\"]:\n",
+    "        countries_col.append(country(aff))\n",
+    "    df[\"country\"] = countries_col\n",
+    "    \n",
+    "    # Calculate the number of authors per paper\n",
+    "    authorsPerPaper = df[[\"title\", \"author\"]].drop_duplicates()[\"title\"].value_counts()\n",
+    "    \n",
+    "    adjustedCount = []\n",
+    "    for paper in df[\"title\"]:\n",
+    "        adjustedCount.append(1/authorsPerPaper[paper])\n",
+    "\n",
+    "    df[\"adjustedCount\"] = adjustedCount\n",
+    "    \n",
+    "    return df"
    ]
   }
  ],
