Add widgets that generate the desired plots

--- a/CSRankings_per_country.ipynb
+++ b/CSRankings_per_country.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24532095",
+   "id": "3f0b0732",
    "metadata": {},
    "source": [
     "# CS848: The art and science of empirical computer science"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c5a08fb",
+   "id": "0b68336e",
    "metadata": {},
    "source": [
     "## Assignment: Visualization Project"
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e305bfe0",
+   "id": "93754294",
    "metadata": {},
    "source": [
-    "**Description:** At a high-level, for this visualization project, I would like you to perform exploratory data analysis on a bibliometric dataset of your choice. From this exploration, I would like you to come up with one or more interesting observations or questions to ask. And then, I would like you to build a visualization that either \"makes the points\" or answers the questions that you posed."
+    "**Description:** At a high-level, for this visualization project, I would like you to perform **ploratory data analysis on a bibliometric dataset of your choice**. From this exploration, I would like you to come up with one or more interesting **observations or questions to ask**. And then, I would like you to **build a visualization** that either \"makes the points\" or answers the questions that you posed."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91d5abac",
+   "id": "55720228",
    "metadata": {},
    "source": [
     "### 1. Exploratory data analysis on a bibliometric dataset of your choice:\n"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "709306e6",
+   "id": "ecd12cb5",
    "metadata": {},
    "source": [
     "* The data set I chose is [DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf). \n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a508c52",
+   "id": "90963413",
    "metadata": {},
    "source": [
     "### 2. Observations or questions to ask:\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1d74e3",
+   "id": "232cb157",
    "metadata": {},
    "source": [
     "### How to answer this question?"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4833a4",
+   "id": "fdc9876b",
    "metadata": {},
    "source": [
     "[DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf) provides the backend information needed to execute SPARQL queries from any where.\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cd7a2149",
+   "id": "b6251ef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1783a24",
+   "id": "4dc40313",
    "metadata": {},
    "source": [
     "But, the returned information does not contain the country!\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3aa12985",
+   "id": "87dc408c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317ab080",
+   "id": "5bf33f42",
    "metadata": {},
    "source": [
     "We create a Pandas dataframe from the result:"
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92ffc3a9",
+   "id": "ab37dd82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +202,111 @@
     "    df[\"adjustedCount\"] = adjustedCount\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27a26cc6",
+   "metadata": {},
+   "source": [
+    "### 3. Build a visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1824f3f9",
+   "metadata": {},
+   "source": [
+    "From this data we generate three visulaizations to answer our question:\n",
+    "1. The first one is similar to CSRankings, which is the **adjusted count of papers** published per country.\n",
+    "    * the adjusted count according to [CSRankings](https://csrankings.org/faq.html) is:\n",
+    "        * **Adjusted counts:** each publication is counted exactly once, with credit adjusted by splitting evenly across all co-authors. This approach makes it impossible to boost rankings simply by adding authors to a paper.\n",
+    "2. The second one is the **number of institutions** per country.\n",
+    "3. The third one is the **number of authors** per country."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fb8ee8b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff06b5f2215f4d32a4339d9cf2e41584",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Label(value='Conferences:'), VBox(children=(Checkbox(value=True, description='NSDI', indent=Fal…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def generatePlots(button):\n",
+    "    df = createDataFrame(keywords.value.split(),\n",
+    "                         conferencesList(checklist),\n",
+    "                         years.label)\n",
+    "    \n",
+    "    clear_output(wait=True)\n",
+    "    showWidgets()\n",
+    "        \n",
+    "    # First plot: papers per country\n",
+    "    papersPerCountry = df[[\"title\", \"author\" ,\"country\", \"adjustedCount\"]].drop_duplicates()\\\n",
+    "        .groupby(\"country\").sum(\"adjustedCount\").sort_values(\"adjustedCount\", ascending=False)\n",
+    "    papersPerCountry.plot.bar(title=\"Papers per country\")\n",
+    "    plt.show()\n",
+    "    print(papersPerCountry)\n",
+    "    \n",
+    "    # Second plot: Institutions per country\n",
+    "    institutionsPerCountry = df[[\"affiliation\", \"country\"]].drop_duplicates()[\"country\"].value_counts()\n",
+    "    institutionsPerCountry.plot.bar(title=\"Institutions per country\")\n",
+    "    plt.show()\n",
+    "    print(institutionsPerCountry)\n",
+    "    \n",
+    "    # Third plot: Authors per country\n",
+    "    authorsPerCountry = df[[\"author\", \"country\"]].drop_duplicates()[\"country\"].value_counts()\n",
+    "    authorsPerCountry.plot.bar(title=\"Authors per country\")\n",
+    "    plt.show()\n",
+    "    print(authorsPerCountry)\n",
+    "\n",
+    "\n",
+    "def conferencesList(checklist):\n",
+    "    conferences = []\n",
+    "    for item in checklist:\n",
+    "        if item.value:\n",
+    "            conferences.append(item.description)\n",
+    "    return conferences\n",
+    "\n",
+    "\n",
+    "def showWidgets():    \n",
+    "    col = widgets.VBox([widgets.Label(\"Keywords:\"), keywords,\n",
+    "                        widgets.Label(\"Years:\"), years, generateButton])\n",
+    "    \n",
+    "    display(widgets.HBox([widgets.Label(\"Conferences:\"), conferencesChecklist, col]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "conferenceOptions = [\"NSDI\",\"OSDI\",\"ASPLOS\",\"SIGCOMM\",\"SOSP\",\"EuroSys\",\"FAST\", \"HPDC\", \"SIGMOD\", \"VLDB\", \"ATC\"]\n",
+    "checklist = []\n",
+    "for conference in conferenceOptions:\n",
+    "        checklist.append(widgets.Checkbox(value=True, description=conference, indent=False))\n",
+    "conferencesChecklist = widgets.VBox(checklist, description=\"Conferences\")\n",
+    "\n",
+    "keywords = widgets.Textarea(placeholder='Enter the keywords that you are looking for')\n",
+    "years = widgets.SelectionRangeSlider(\n",
+    "            options = [i for i in range(1970,2023)],\n",
+    "            index=(0, 2022 - 1970),\n",
+    "            disabled=False)\n",
+    "generateButton = widgets.Button(description='Generate plots')\n",
+    "generateButton.on_click(generatePlots)\n",
+    "\n",
+    "\n",
+    "showWidgets()"
    ]
   }
  ],
