--- a/CSRankings_per_country.ipynb
+++ b/CSRankings_per_country.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f0b0732",
+   "id": "e11650c9",
    "metadata": {},
    "source": [
     "# CS848: The art and science of empirical computer science"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b68336e",
+   "id": "18672500",
    "metadata": {},
    "source": [
     "## Assignment: Visualization Project"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93754294",
+   "id": "55deef56",
    "metadata": {},
    "source": [
     "**Description:** At a high-level, for this visualization project, I would like you to perform **ploratory data analysis on a bibliometric dataset of your choice**. From this exploration, I would like you to come up with one or more interesting **observations or questions to ask**. And then, I would like you to **build a visualization** that either \"makes the points\" or answers the questions that you posed."
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55720228",
+   "id": "2b03b7db",
    "metadata": {},
    "source": [
     "### 1. Exploratory data analysis on a bibliometric dataset of your choice:\n"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecd12cb5",
+   "id": "9f1a6a14",
    "metadata": {},
    "source": [
     "* The data set I chose is [DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf). \n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90963413",
+   "id": "77803d95",
    "metadata": {},
    "source": [
     "### 2. Observations or questions to ask:\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "232cb157",
+   "id": "1e1a16e1",
    "metadata": {},
    "source": [
     "### How to answer this question?"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc9876b",
+   "id": "45d24490",
    "metadata": {},
    "source": [
     "[DBLP](https://qlever.cs.uni-freiburg.de/dblp/jzdksf) provides the backend information needed to execute SPARQL queries from any where.\n",
@@ -89,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b6251ef5",
+   "execution_count": 1,
+   "id": "4444c918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +131,13 @@
     "                row.append(res[col]['value'])\n",
     "            else:\n",
     "                row.append(\"\")\n",
-    "        rows.append(row)\n"
+    "        rows.append(row)\n",
+    "    return rows, cols\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4dc40313",
+   "id": "d242618e",
    "metadata": {},
    "source": [
     "But, the returned information does not contain the country!\n",
@@ -146,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "87dc408c",
+   "execution_count": 2,
+   "id": "44d70924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bf33f42",
+   "id": "d91493cc",
    "metadata": {},
    "source": [
     "We create a Pandas dataframe from the result:"
@@ -178,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab37dd82",
+   "execution_count": 3,
+   "id": "0dec382f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a26cc6",
+   "id": "8134f44b",
    "metadata": {},
    "source": [
     "### 3. Build a visualization"
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1824f3f9",
+   "id": "59fcc84f",
    "metadata": {},
    "source": [
     "From this data we generate three visulaizations to answer our question:\n",
@@ -228,13 +229,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb8ee8b6",
-   "metadata": {},
+   "id": "11762f13",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff06b5f2215f4d32a4339d9cf2e41584",
+       "model_id": "b1f7dccceada44caa0aa3178e3f19244",
        "version_major": 2,
        "version_minor": 0
       },
